--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     border: 1px solid #ddd;
     border-radius: 5px;
     font-size: 16px;
+    text-transform: uppercase;
   }
   button {
     background-color: #0b74c4;
@@ -90,7 +91,6 @@ function searchGST() {
     const gstin = document.getElementById("gstin").value.trim().toUpperCase();
     const resultDiv = document.getElementById("result");
 
-    // Validate GSTIN format
     const gstRegex = /^[0-9]{2}[A-Z]{5}[0-9]{4}[A-Z]{1}[1-9A-Z]{1}Z[0-9A-Z]{1}$/;
     if (!gstRegex.test(gstin)) {
         resultDiv.innerHTML = "<p style='color:red;'>Invalid GSTIN format.</p>";
@@ -108,21 +108,21 @@ function searchGST() {
     })
     .then(response => response.json())
     .then(data => {
-        if (data.flag !== "1") {
+        if (data.flag !== "1" || !data.data) {
             resultDiv.innerHTML = "<p style='color:red;'>GSTIN not found or inactive.</p>";
             return;
         }
 
-        const details = data.data;
+        const d = data.data;
         let output = `
           <table>
-            <tr><th>GSTIN</th><td>${details.gstin}</td></tr>
-            <tr><th>Trade Name</th><td>${details.tradeNam || "N/A"}</td></tr>
-            <tr><th>Legal Name</th><td>${details.lgnm || "N/A"}</td></tr>
-            <tr><th>Status</th><td>${details.sts || "N/A"}</td></tr>
-            <tr><th>Registration Date</th><td>${formatDate(details.rgdt)}</td></tr>
-            <tr><th>Type</th><td>${details.ctb || "N/A"}</td></tr>
-            <tr><th>Business Type</th><td>${details.dty || "N/A"}</td></tr>
+            <tr><th>GSTIN</th><td>${d.gstin || "N/A"}</td></tr>
+            <tr><th>Trade Name</th><td>${d.tradeNam || "N/A"}</td></tr>
+            <tr><th>Legal Name</th><td>${d.lgnm || "N/A"}</td></tr>
+            <tr><th>Status</th><td>${d.sts || "N/A"}</td></tr>
+            <tr><th>Registration Date</th><td>${formatDate(d.rgdt)}</td></tr>
+            <tr><th>Type</th><td>${d.ctb || "N/A"}</td></tr>
+            <tr><th>Business Type</th><td>${d.dty || "N/A"}</td></tr>
           </table>
         `;
         resultDiv.innerHTML = output;
@@ -135,8 +135,11 @@ function searchGST() {
 
 function formatDate(dateStr) {
     if (!dateStr) return "N/A";
-    const [year, month, day] = dateStr.split("-");
-    return `${day}-${month}-${year}`;
+    if (dateStr.includes("-")) {
+        const [year, month, day] = dateStr.split("-");
+        return `${day}-${month}-${year}`;
+    }
+    return dateStr;
 }
 </script>
 </body>
